--- a/license-cloud/src/components/Auth/UpdatePassword.css
+++ b/license-cloud/src/components/Auth/UpdatePassword.css
@@ -48,7 +48,7 @@ body, html {
   .form-group {
     display: flex;
     flex-direction: column;
-    gap: 18px;
+    /* gap: 18px; */
   }
   
   .form-group label {
