--- a/license-cloud/src/components/Dashboard/UserDetails/UserDetails.css
+++ b/license-cloud/src/components/Dashboard/UserDetails/UserDetails.css
@@ -262,7 +262,7 @@ html, body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 10;
   padding: 8px 0;
-  min-width: 100px;
+  min-width: 150px;
 }
 
 .dropdown-menu button {
@@ -655,4 +655,37 @@ html, body {
   justify-content: space-between;
   padding: 8px 0;
   margin-bottom: 5px;
+}
+
+.switch-cell {
+  text-align: center;
+}
+
+.custom-switch {
+  width: 40px;
+  height: 20px;
+  background-color: #ccc;
+  border-radius: 20px;
+  position: relative;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.custom-switch.on {
+  background-color: #4caf50;
+}
+
+.switch-knob {
+  width: 18px;
+  height: 18px;
+  background-color: white;
+  border-radius: 50%;
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  transition: left 0.2s ease;
+}
+
+.custom-switch.on .switch-knob {
+  left: 21px;
 }
