Bug fixed, New Updates

--- a/license-cloud/src/components/Dashboard/LicenseDetails/LicenseDetails.css
+++ b/license-cloud/src/components/Dashboard/LicenseDetails/LicenseDetails.css
@@ -120,7 +120,8 @@
 }
 
 .table-container {
-  overflow-x: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .details-table {
@@ -174,3 +175,4 @@
     padding: 0.5rem;
   }
 }
+
