--- a/license-cloud/src/components/Dashboard/Clients/Clients.css
+++ b/license-cloud/src/components/Dashboard/Clients/Clients.css
@@ -2,7 +2,7 @@
 .clients-container {
     max-width: 1400px;
     margin: 0 auto;
-    padding: 2rem;
+    padding: 1rem;
     font-family: 'Inter', 'Segoe UI', sans-serif;
   }
   
@@ -25,7 +25,7 @@
     background-color: white;
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
-    overflow: auto;
+    /* overflow: auto; */
     margin-bottom: 1.5rem;
   }
   
